# IFS08-DV-PIPELINE

./: .gitignore  PRERUN.md  README.md
.github/workflows/: branch-issue.yml
bag_recorder_node/: package.xml  setup.py
bag_recorder_node/bag_recorder_node/: node.py  recorder.py
bag_recorder_node/test/: test_recorder.py
bringup/: package.xml  setup.py
bringup/bringup/: launch_common.py  topic_contract.py
bringup/launch/: car_bringup.launch.py  car_pipeline.launch.py  car_sensors.launch.py  full_pipeline.launch.py  sim_pipeline.launch.py
bringup/test/: test_hard_stop_launch_default.py  test_launch_layer_split.py  test_topic_contract.py
car_sensor_bridge/: package.xml  setup.cfg  setup.py
car_sensor_bridge/car_sensor_bridge/: car_sensor_bridge_node.py  conversions.py
car_sensor_bridge/resource/: car_sensor_bridge
car_sensor_bridge/test/: test_conversions.py
car_supervisor/: package.xml  setup.cfg  setup.py
car_supervisor/car_supervisor/: actuation.py  car_supervisor_node.py  policy.py
car_supervisor/resource/: car_supervisor
car_supervisor/test/: test_actuation.py  test_policy.py
coche_urdf/: CMakeLists.txt  package.xml  setup.cfg  setup.py
coche_urdf/coche_urdf/: coche_urdf.py
coche_urdf/launch/: coche_urdf.launch.py  robot_state_publisher.launch.py
coche_urdf/meshes/: fl_wheel_06.dae  fr_wheel_06.dae  fr_x.dae  lando.dae  rl_wheel_06.dae  rr_wheel_06.dae
coche_urdf/urdf/: dfghjkfghj  ifs06.urdf.xacro  ifs_08.urdf  qev-3d.urdf.xacro  sensors.urdf.xacro  vehicle.urdf.xacro
cone_detection/: datos.txt  package.xml  setup.cfg  setup.py  track.txt
cone_detection/cone_detection/: cone_detection.py  cone_detection_node.py  cone_fit.py  ground_removal.py  lidar_io.py  ransac.py  rotaciones.py  rotations.py  two_phase_cone_detection.py
cone_detection/cone_detection/strategies/: __init__.py  base_cone_detection.py  cone_detection_strategy.py
cone_detection/meshes/: any_small.dae  orange_big.dae
cone_detection/test/: test_pointcloud_decode.py  test_tall_column_veto.py
cone_slam/: package.xml  setup.cfg  setup.py
cone_slam/cone_slam/: color_classifier.py  cone_graph_slam_node.py  data_association.py  factor_graph.py  frozen_map.py  imu_preintegrator.py  landmark_db.py  lap_counter.py  lap_detector.py  phase1_mapper.py  phase2_localiser.py  skidpad_passthrough.py  slam_node.py  tf_math.py
cone_slam/scripts/: gt_pose_relay.py  replay_slam.py
cone_slam/test/: test_cascade_spike_detector.py  test_data_association.py  test_landmark_proximity.py  test_lap_counter.py  test_lap_detector.py  test_map_to_odom.py  test_orange_filter.py  test_phase1_mapper.py  test_phase2_localiser.py  test_pose_sanity_check.py  test_skidpad_passthrough.py  test_skidpad_passthrough_node.py
cone_slam/test/regression/: test_replay_regression.py
cone_slam/test/regression/fixtures/: autocross_no-track_20260517_172922.yaml
control/: package.xml  setup.py
control/control/: control.py  control_node.py  controlador_stanley.py  reference.py  state.py  utils.py  velocity_control.py
control/control/controllers/: actuation.py  base.py  composite_drive.py  pi_velocity.py  pure_pursuit.py  stanley.py
control/control/models/: bicycle.py
control/test/: test_pure_pursuit.py  test_stop_anchor_gating.py
deploy/: dv  dv-automission.service  dv-manual.service  dv-pipeline.service  dv-race.sudoers  dv-record.service  dv_automission.sh  dv_detect_mode.sh  dv_manual.sh  dv_mode_boot.sh  dv_record.sh  dv_warm_numba.sh  install_dv_pipeline_service.sh  install_ptp4l.sh  prerun-play  prerun_restamp_relay.py  ptp4l.conf  ptp4l.service
docs/: CAR_ADAPTATION.md  HARD_STOP.md  HARD_STOP_BENCH.md  RECORDING.md  WATCHDOG.md  lidar_imu_time_sync_mitigation.md
dv_msgs/: CMakeLists.txt  package.xml
dv_msgs/action/: RuntimeControl.action  SetMission.action  StartMission.action
dv_msgs/msg/: LifecycleProgress.msg
dv_msgs/srv/: ActivateMode.srv  Setup.srv  StartBag.srv  StopBag.srv
fs_msgs/: CMakeLists.txt  package.xml
fs_msgs/msg/: Cone.msg  ControlCommand.msg  ExtraInfo.msg  FinishedSignal.msg  WheelStates.msg
mission_control/: package.xml  setup.py
mission_control/mission_control/: interface_contract.py  interface_qos.py  mission_control_node.py  reconcile.py
mission_control/test/: test_dv_stopping_gating.py  test_interface_contract.py  test_reconcile.py  test_stage_from_progress.py
mode_manager/: package.xml  setup.py
mode_manager/mode_manager/: mode_manager_node.py  mode_registry.py
node_base/: package.xml  setup.cfg  setup.py
node_base/node_base/: __init__.py  base_lifecycle_node.py
node_base_cpp/: CMakeLists.txt  package.xml
node_base_cpp/include/node_base_cpp/: base_lifecycle_node.hpp
node_base_cpp/src/: base_lifecycle_node.cpp
odometria/: package.xml  setup.cfg  setup.py
odometria/odometria/: formulas.md  odometria.py  odometria_perfecta.py
odometry_filter/: CMakeLists.txt  package.xml
odometry_filter/include/odometry_filter/: odometry_filter.hpp
odometry_filter/src/: odometry_filter.cpp  python_bindings.cpp
odometry_filter/test/: test_odometry_filter.cpp  validate_vs_python.py  validate_vs_python_harness.cpp
odometry_filter_node/: CMakeLists.txt  package.xml
odometry_filter_node/src/: odometry_filter_node.cpp
path_planning/: package.xml  setup.py
path_planning/path_planning/: __init__.py  core_types.py  fasttube_adapter.py  path_planning.py  planner.py  planner_strategies.py
path_planning/test/: test_fasttube_adapter.py  (+2 more)
pipeline_watchdog/: package.xml  setup.cfg  setup.py
pipeline_watchdog/pipeline_watchdog/: health_monitor.py  pipeline_watchdog_node.py
pipeline_watchdog/test/: test_health_monitor.py  test_watchdog_contract.py  test_watchdog_node_behavior.py
skidpad/: package.xml  setup.cfg  setup.py
skidpad/skidpad/: skidpad_driver.py  skidpad_planner_runtime.py  skidpad_reference.py
skidpad/test/: test_skidpad_driver.py  test_skidpad_integration.py  test_skidpad_planner_runtime.py  test_skidpad_reference.py
slam/: package.xml  setup.py
tools/: README.md  mission_injector.py  record_pipeline_replay.sh
(+50 files in other folders)
