<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dv_msgs</name>
  <version>0.0.1</version>
  <description>
    Driverless-pipeline interface package: action definitions exchanged
    between sim_supervisor_node and mission_control_node (StartMission,
    RuntimeControl). Kept in its own package so producers and consumers
    can depend on the interfaces without pulling each other's Python
    code in. Mirrors the fs_msgs / ifssim_bridge split on the bridge
    side.
  </description>
  <maintainer email="raul@isc-fs.com">Raul Moran</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
