<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odometry_filter</name>
  <version>0.1.0</version>
  <description>
    C++ port of the Python OdometryFilter (formerly in
    sim_supervisor.odometry). Pure-math complementary filter: IMU
    prediction + motor-RPM correction + kinematic-bicycle yaw
    cross-check + brake-pressure α scaling. No ROS dependency in the
    library itself — that lives in the future odometry_filter_node
    package. Algorithm is identical to the Python reference (validated
    by gtest fixtures shared with the Python pytest suite). Same code
    is the basis for the real-car uDV firmware filter; porting now
    means sim and car run literally the same C++ from day one.
  </description>
  <maintainer email="moranguerra18@gmail.com">Raúl Morán</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>eigen</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
